   - my_cell_renderer_double_xxx(): are renamed to my_double_renderer_xxx().
   - my_editable_double_xxx(): are renamed to my_double_editable_xxx().
   - myDateCombo: rename 'ofa-changed' signal to 'my-changed'.
   - myDecimalCombo: rename 'ofa-changed' signal to 'my-changed'.
   - myFieldCombo: rename 'ofa-changed' signal to 'my-changed'.
   - ofa_amount_xxx(): new functions.
   - ofa_counter_xxx(): new functions.

-----------------------------------------------------------------------
 Version 0.51
 ============

 Released on 2016-03-17

 New features and improvements:

   - Recurrent: new plugin (todo #213).
   - ofaIDBModel: extended to let plugins check objects deletability (todo #1043). 

 Bug fixes:

   - ofaAccountProperties: force indicators to FALSE if root account.

 Other changes:

   - my_idialog_run_maybe_modal(): new method.
   - ofaAccountFrameBin: moved to core/.
   - ofaAccountProperties: moved to core/.
   - ofaAccountSelect: moved to core/.
   - ofaAccountStore: moved to core/.
   - ofaCurrencyCombo: moved to core/.
   - ofaCurrencyStore: moved to core/.
   - ofaGuidedInputBin: moved to core/.
   - ofaIEntryOpeTemplate: new interface.
   - ofaLedgerCombo: moved to core/.
   - ofaLedgerStore: moved to core/.
   - ofaLedgerCombo: moved to core/.
   - ofaOpeTemplateFrameBin: moved to core/.
   - ofaOpeTemplateHelp: moved to core/.
   - ofaOpeTemplateProperties: moved to core/.
   - ofaOpeTemplateSelect: moved to core/.
   - ofaOpeTemplateStore: moved to core/.
   - ofa_idbconnect_has_table(): new method.

-----------------------------------------------------------------------
 Version 0.50
 ============

 Released on 2016-03-13

 New features and improvements:

   - Have a new icon for account selection (todo #1034).
   - DBModel v28: increase all identifiers and labels size (todo #969). 
   - ofaReconciliation: asssociates an account to the used BAT files (todo #751).
   - ofaReconciliation: manage BAT vs. Account selection (todo #752).